--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
 <body>
     <main>
@@ -14,7 +15,7 @@
 
             </div>
             <div id="formulario">
-                <h1></h1>
+                <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar a sua conta e fazer as configurações no seu ambiente.</p>
                 <form action="login.php" method="post"></form>
             </div>
